fix alignment of images in resources/participatory-mapping-toolkit

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -902,6 +902,7 @@ em {
 
 .module-text {
   font-size: 0.9375rem;
+  min-height: 5rem;
   flex-grow: 1;
   margin-bottom: 12px;
   p {
